crates/ruff_python_parser/tests/snapshots/invalid_syntax@yield_outside_function.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/yield_outside_function.py
---
## AST

```
Module(
    ModModule {
        range: 0..35,
        body: [
            Expr(
                StmtExpr {
                    range: 0..7,
                    value: Yield(
                        ExprYield {
                            range: 0..7,
                            value: Some(
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 6..7,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                            ),
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 8..20,
                    value: YieldFrom(
                        ExprYieldFrom {
                            range: 8..20,
                            value: NumberLiteral(
                                ExprNumberLiteral {
                                    range: 19..20,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 21..28,
                    value: Await(
                        ExprAwait {
                            range: 21..28,
                            value: NumberLiteral(
                                ExprNumberLiteral {
                                    range: 27..28,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 29..34,
                    value: Yield(
                        ExprYield {
                            range: 29..34,
                            value: None,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Semantic Syntax Errors

  |
1 | yield 1
  | ^^^^^^^ Syntax Error: `yield` statement outside of a function
2 | yield from 1
3 | await 1
  |


  |
1 | yield 1
2 | yield from 1
  | ^^^^^^^^^^^^ Syntax Error: `yield from` statement outside of a function
3 | await 1
4 | yield
  |


  |
1 | yield 1
2 | yield from 1
3 | await 1
  | ^^^^^^^ Syntax Error: `await` statement outside of a function
4 | yield
  |


  |
2 | yield from 1
3 | await 1
4 | yield
  | ^^^^^ Syntax Error: `yield` statement outside of a function
  |
